Added instructions for compiling

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,3 +12,9 @@ link_directories(/usr/lib/aarch64-linux-gnu/tegra)
 cuda_add_executable(HelloNanoWorld image-recognition.cpp)
 
 target_link_libraries(HelloNanoWorld jetson-inference)
+
+# To run: 
+# Stand in the same folder as this file. 
+# run "cmake ."
+# Then run "make"
+# Example classificaiton run: ./HelloNanoWorld black_bear.jpg
